# playlist-maker

./: Cargo.toml  README.md  cli.yml  test.m3u  test2.m3u
.github/workflows/: CD.yml  CI.yml
autocompletions/: _pl-mker  pl-mker.bash  pl-mker.elvish  pl-mker.fish  pl-mker.powershell
src/: cli.yml  grammar.pest  main.rs  operator.rs  pair_extended.rs  path_extended.rs  path_matching.rs  playlist.rs  query_walk.rs  song.rs  song_metadata.rs  song_tag.rs  song_tag_checker.rs  string_extractor.rs
src/id3/: id3.rs  mod.rs
src/path/: matching.rs
src/playlist/: mod.rs
src/query/: grammar.pest  mod.rs  processor.rs  string_extractor.rs
src/song/: info.rs  mod.rs  playlist.rs
src/tag/: checker.rs  details.rs  matcher.rs  mod.rs  type.rs
src/utils/: fs.rs  iter.rs  matching.rs  mod.rs  printer.rs
test-data/: index.csv  playlist.m3u
