[package]
name = "playlist-maker"
version = "0.3.0"
authors = ["FilipeMCruz <filipeCruz@tuta.io>"]
edition = "2021"

[dependencies]
pest = "2.5.2"
pest_derive = "2.5.2"
walkdir = "2.3.2"
id3 = "1.5.1"
regex = "1.7.0"
num_cpus = "1.15.0"

[dependencies.clap]
version = "4.0.32"
default-features = false
features = ["derive", "std", "help", "usage", "suggestions", "color"]
