[package]
name = "playlist-maker"
version = "0.6.0"
authors = ["FilipeMCruz <filipeCruz@tuta.io>"]
edition = "2021"

[dependencies]
pest = "2.5.3"
pest_derive = "2.5.3"
walkdir = "2.3.2"
id3 = "1.5.1"
regex = "1.7.1"
num_cpus = "1.15.0"
csv = "1.1.6"
serde = "1"
serde_derive = "1"

[dependencies.clap]
version = "4.1.1"
default-features = false
features = ["derive", "std", "help", "usage", "suggestions", "color"]
